--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -37,3 +37,9 @@ body {
     @apply max-w-7xl mx-auto p-5 lg:p-0;
   }
 }
+
+.text-gradient {
+  @apply bg-gradient-to-r from-white to-zinc-400;
+  @apply bg-clip-text text-transparent
+
+}
